# waypath

./: .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run.sh  waypath.db
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
.github/workflows/: ci.yml  deploy.yml  release.yml
alembic/: env.py
alembic/versions/: 192c2ce114e7_add_currency.py  c89f32aa181f_initial_schema.py
documentation/: v0_10_0.md  v0_27_0.md
src/api/: app.py  main.py
src/api/crud/: invoices.py  jobs.py  orders.py  users.py
src/api/models/: users.py
src/api/routers/: auth.py  invoices.py  jobs.py  orders.py  users.py  utils.py
src/api/schemas/: order.py  user.py
src/core/: cli.py
src/core/crud/: invoices.py  orders.py
src/core/db/: models.py
src/core/logic/: pipeline.py
src/core/models/: users.py
src/core/schemas/: auth.py  classifier.py  common.py  invoice.py  job.py  order.py  user.py
src/core/services/: document_parser.py  factories.py  structuring.py
src/core/services/classifiers/: azure_openai.py  base.py  openai.py
src/core/services/extractors/: azure_openai.py  base.py  openai.py
src/core/services/parsers/: azure_parser.py  base.py  llamaparse_parser.py
src/core/utils/: auth.py  background.py  config.py  database.py  idsvc.py  logging.py  process.py  sendmail.py
src/core/validators/: total_amount.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
